@@ -1,6 +1,6 @@
 Package: diffHic
-Version: 1.5.3
-Date: 2016-06-18
+Version: 1.5.4
+Date: 2016-08-05
 Title: Differential Analyis of Hi-C Data
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
